--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12">
+            <h1 class="text-center" >Sejam bem vindes ao meu blog!</h1>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-md-12">
+            <p class="text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas saepe quam debitis repudiandae eaque? Cum, itaque nostrum sint consequuntur, labore omnis rerum facilis inventore, voluptates vitae molestiae quod quas!
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="parallax"></div>
+<div class="row my-5">
+    <div class="col-md-12 d-flex justify-content-center">
+        <button class ="btn btn-outline-dark" routerLink = '/feed'>
+            Ver o feed
+        </button>
+    </div>
+</div>
