Implementação da pagina do Feed

--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -1,1 +1,43 @@
-<p>feed works!</p>
+<div class="container">
+    <div class="row my-5">
+        <div class="col-md-4">
+            <div class="card border-0" style="width: 18rem;">
+                <div class="d-flex justify-content-center">
+                    <img src="https://i.imgur.com/iP9xnOJ.png" class="rounded-circle w-75 card-img-top" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-center">Gabriel Rodrigues de Oliveira</h5>
+                    <p class="card-text text-center">Estudando do bootcamp de desenvolvimento Full Stack da Generation Brasil.</p>
+                    <a href="https://www.linkedin.com/in/gabrielrodriguesoliveira/" class="d-flex justify-content-center btn btn-outline-info mb-3" target="_blank">
+                        LinkedIn
+                    </a>
+                    <a href="https://github.com/gabrieloliveiradev" class="d-flex justify-content-center btn btn-outline-dark" target="_blank">
+                        GitHub
+                    </a>
+                    <hr class="my-4">
+                    <h6 class="mb-3 text-monospace text-center">Pesquisar por titulo</h6>
+                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
+                    <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div>
+                <h3 class="text-center mb-4 text-monospace">Como tem sido minha experiência na Generation</h3>
+                <div class="form-group">
+                    <label for="titulo" class="text-monospace">Titulo:</label>
+                    <input type="text" id="titulo" class="form-control" name="titulo" placeholder="Digite seu titulo">
+                </div>
+                <div class="form-group">
+                    <label for="texto" class="text-monospace">Texto:</label>
+                    <textarea name="texto" id="texto" cols="30" rows="4" class="form-control" placeholder="Digite seu texto"></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-outline-info w-25">Publicar</button>
+                </div>
+                <hr class="my-5">
+                <h3 class="text-monospace text-center">Minhas Postagens</h3>
+            </div>
+        </div>
+    </div>
+</div>
