Criação do componente editar e implementação do endpoint putPostagem

--- a/blogPessoal/src/app/editar/editar.component.html
+++ b/blogPessoal/src/app/editar/editar.component.html
@@ -14,16 +14,12 @@
                     <a href="https://github.com/gabrieloliveiradev" class="d-flex justify-content-center btn btn-outline-dark" target="_blank">
                         GitHub
                     </a>
-                    <hr class="my-4">
-                    <h6 class="mb-3 text-monospace text-center">Pesquisar por titulo</h6>
-                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
-                    <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
                 </div>
             </div>
         </div>
         <div class="col-md-8">
             <div>
-                <h3 class="text-center mb-4 text-monospace">Como tem sido minha experiência na Generation</h3>
+                <h3 class="text-center mb-4 text-monospace">Edição de postagem</h3>
                 <div class="form-group">
                     <label for="titulo" class="text-monospace">Titulo:</label>
                     <input type="text" id="titulo" class="form-control" name="titulo" placeholder="Digite seu titulo" [(ngModel)]="postagem.titulo">
@@ -33,32 +29,8 @@
                     <textarea name="texto" id="texto" cols="30" rows="4" class="form-control" placeholder="Digite seu texto" [(ngModel)]="postagem.texto"></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-info w-25" (click)="publicar()">Publicar</button>
-                </div>
-                <hr class="my-5">
-                <h3 class="text-monospace text-center mb-5">Minhas Postagens</h3>
-
-                <div class="card mb-4" *ngFor="let postagem of listaPostagens | orderBy : key: reverse">
-
-                    <div class="card-header">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <h5 class="card-title">{{ postagem.titulo }}</h5>
-                            </div>
-                            <div class="col-md-4 d-flex justify-content-end">
-                                <button class="btn btn-outline-info" [routerLink] = "['/editar', postagem.id]">Editar</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">
-                        {{ postagem.texto }}
-                    </p>
-                    <small class="form-text m-0 text-muted mb-3 text-monospace">
-                        Postado em {{ postagem.data | date: 'dd/MM/yyyy'}} ás {{ postagem.data | date: 'HH:mm' }}
-                    </small>
-                    </div>
-                </div>
+                    <button type="button" class="btn btn-outline-info w-25" (click)="salvar()">Salvar</button>
+                </div>  
             </div>
         </div>
     </div>
