--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -16,8 +16,8 @@
                     </a>
                     <hr class="my-4">
                     <h6 class="mb-3 text-monospace text-center">Pesquisar por titulo</h6>
-                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
-                    <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem" [(ngModel)]="titulo">
+                    <button class="btn btn-outline-warning w-100" type="button" (click)= "pesquisarPorTitulo()">Pesquisar</button>
                 </div>
             </div>
         </div>
